# BereZka

./: .gitignore  README.md  usersbd.sql
16616/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13367  13367_fsm  13367_vm  13372  13372_fsm  13372_vm  13376  13377  13377_fsm  13377_vm  13381  13382  13382_fsm  13382_vm  13386  16620  16633  16637  16638  174  175  2187  2224  2228  2337  2579  (+207 more)
Server/: .env  Cargo.toml  usersbd.sql  Документация_для_API.md
Server/src/: db.rs  main.rs  models.rs  repository.rs  schema.rs
frontend/: 4 started screens.txt  Design Chats.txt
frontend/Regist/: settings.gradle.kts
frontend/Regist/app/: build.gradle.kts
frontend/Regist/app/src/androidTest/java/com/example/berezka/: ExampleInstrumentedTest.kt
frontend/Regist/app/src/main/java/com/example/berezka/: MainActivity.kt
frontend/Regist/app/src/main/res/values/: themes.xml
frontend/Regist/gradle/: libs.versions.toml
frontend/main/: .gitignore  gradle.properties
frontend/main/app/: build.gradle.kts
frontend/main/app/src/main/: AndroidManifest.xml
frontend/main/app/src/main/java/: ChatsScreen.kt
frontend/main/app/src/main/res/layout/: activity_chats.xml  activity_login.xml  activity_register.xml
frontend/main/app/src/main/res/values/: strings.xml
frontend/main/gradle/: libs.versions.toml
frontend/main/gradle/wrapper/: gradle-wrapper.properties
РЕГИСТРАЦИЯ/app/src/main/: AndroidManifest.xml
РЕГИСТРАЦИЯ/gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
