[package]
name = "berezka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "berezka"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.3.6", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
